--- a/projects/nutrition/index.html
+++ b/projects/nutrition/index.html
@@ -160,18 +160,53 @@
             .nutfacts .calories div:last-child {
                 font-size: 22pt;
             }
+            #configuration .left {
+                margin-right: 2em;
+            }
         </style>
     </head>
     <body>
         <template id="navigator">
-            <v-ons-navigator swipeable :page-stack="page_stack"/>
+            
+                    <v-ons-navigator swipeable :page-stack="page_stack"/>
+              
         </template>
         <template id="main">
-            <v-ons-page id="logo-page">
-                <v-ons-toolbar>
-                    <div class="center">{{ title }}</div>
-                </v-ons-toolbar>
-                <v-ons-tabbar position="bottom" :tabs="tabs" :visible="true" v-on:update:index="update_index" :index="index" swipeable/>
+            <v-ons-page>
+            <input style="display:none" id="import_input" type="file" @change="import_data()">
+            <v-ons-splitter>
+                <v-ons-splitter-side swipeable width="150px" collapse="" side="right" :open.sync="open_side">
+                    <v-ons-page>
+                        <v-ons-list>
+                            <v-ons-list-item tappable @click="load_import()">
+                                <div class="center">Import Data</div>
+                            </v-ons-list-item>
+                            <v-ons-list-item tappable @click="export_data()">
+                                <div class="center">Export Data</div>
+                            </v-ons-list-item>
+                            <v-ons-list-item tappable @click="open_configuration()">
+                                <div class="center">Configuration</div>
+                            </v-ons-list-item>
+                            <v-ons-list-item tappable @click="reset_caches()">
+                                <div class="center">Reset Caches</div>
+                            </v-ons-list-item>
+                        </v-ons-list>
+                    </v-ons-page>
+                </v-ons-splitter-side>
+                <v-ons-splitter-content>
+                    <v-ons-page>
+                        <v-ons-toolbar>
+                            <div class="center">{{ title }}</div>
+                            <div class="right">
+                                <v-ons-toolbar-button @click="open_extra_menu()">
+                                    <v-ons-icon icon="md-more-vert"></v-ons-icon>
+                                </v-ons-toolbar-button>
+                            </div>
+                        </v-ons-toolbar>
+                        <v-ons-tabbar position="bottom" :tabs="tabs" :visible="true" v-on:update:index="update_index" :index="index" swipeable/>
+                    </v-ons-page>
+                </v-ons-splitter-content>
+            </v-ons-splitter>
             </v-ons-page>
         </template>
         <template id="nutrition">
@@ -436,7 +471,7 @@
         <template id="recipes">
             <v-ons-page>
                 <div class="content">
-                    <p class="text" v-if="has_no_recipes">
+                    <p class="text" v-if="recipes.length == 0">
                         No recipes added yet. Use the button below to add a new recipe.
                     </p>
                     <v-ons-list>
@@ -693,6 +728,42 @@
                         </v-ons-list-item>
                     </v-ons-list>
                     <v-ons-button @click="add">Add</v-ons-button>
+                </div>
+            </v-ons-page>
+        </template>
+        <template id="configuration-page">
+            <v-ons-page id="configuration">
+                <v-ons-toolbar>
+                    <div class="left">
+                        <v-ons-back-button>Back</v-ons-back-button>
+                    </div>
+                    <div class="center">Configuration</div>
+                </v-ons-toolbar>
+                <div class="content">
+                    <v-ons-list>
+                        <v-ons-list-header>Syncing</v-ons-list-header>
+                        <v-ons-list-item>
+                            <div class="left">CouchDB Host</div>
+                            <div class="center"><v-ons-input v-model="config.couch_host"></v-ons-input></div>
+                        </v-ons-list-item>
+                        <v-ons-list-item>
+                            <div class="left">CouchDB Port</div>
+                            <div class="center"><v-ons-input v-model="config.couch_port"></v-ons-input></div>
+                        </v-ons-list-item>
+                        <v-ons-list-item>
+                            <div class="left">CouchDB Username</div>
+                            <div class="center"><v-ons-input v-model="config.couch_username"></v-ons-input></div>
+                        </v-ons-list-item>
+                        <v-ons-list-item>
+                            <div class="left">CouchDB Password</div>
+                            <div class="center"><v-ons-input type="password" v-model="config.couch_password"></v-ons-input></div>
+                        </v-ons-list-item>
+                        <v-ons-list-item>
+                            <div class="left">Sync Enabled</div>
+                            <div class="center"><v-ons-switch v-model="config.sync_enabled"></v-ons-switch></div>
+                        </v-ons-list-item>
+                    </v-ons-list>
+                    <v-ons-button @click="save_config()">Save Config</v-ons-button>
                 </div>
             </v-ons-page>
         </template>
