--- a/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.slides.html
+++ b/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.slides.html
@@ -13321,7 +13321,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Automation-Predates-the-Term">Automation Predates the Term<a class="anchor-link" href="#Automation-Predates-the-Term">&#182;</a></h1><hr>
-<h3 id="From-1790,-the-automated-mill:">From 1790, the automated mill:<a class="anchor-link" href="#From-1790,-the-automated-mill:">&#182;</a></h3><p><img src="Oliver_Evans_-_Automated_mill.jpg" style="width: 60%"></p>
+<h3 id="From-1790,-the-automated-mill:">From 1790, the automated mill:<a class="anchor-link" href="#From-1790,-the-automated-mill:">&#182;</a></h3><p><img src="Oliver_Evans_-_Automated_mill.jpg" style="margin: auto; width: 60%"></p>
 
 </div>
 </div>
@@ -13590,8 +13590,8 @@ Ashraful Islam Shimul / CC BY-SA (<a href="https://creativecommons.org/licenses/
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Q&amp;A-&amp;-Feedback">Q&amp;A &amp; Feedback<a class="anchor-link" href="#Q&amp;A-&amp;-Feedback">&#182;</a></h1><hr>
 <p>Thank you for attending!</p>
-<p>Please see form <insert link>.
-Presentation link <insert link>.</p>
+<p>Feedback form <a href="https://forms.gle/9E8pdkJ9jR9ybfSk7">https://forms.gle/9E8pdkJ9jR9ybfSk7</a>.</p>
+<p>Presentation link <a href="https://kahowell.net/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.slides.html">https://kahowell.net/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.slides.html</a>.</p>
 
 </div>
 </div>
