Fix missing slide

--- a/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.slides.html
+++ b/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.slides.html
@@ -13513,7 +13513,7 @@ Ashraful Islam Shimul / CC BY-SA (<a href="https://creativecommons.org/licenses/
 
 </div>
 </div>
-</div>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Ansible---Example-Playbook">Ansible - Example Playbook<a class="anchor-link" href="#Ansible---Example-Playbook">&#182;</a></h1><hr>
