Fix preso link and add some more Ansible links

--- a/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.slides.html
+++ b/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.slides.html
@@ -13495,8 +13495,7 @@ Ashraful Islam Shimul / CC BY-SA (<a href="https://creativecommons.org/licenses/
 </pre></div>
 <p><code>/home/user/ansible/templates/hosts.j2</code>:</p>
 
-<pre><code>jinja2
-127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4
+<pre><code>127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4
 ::1         localhost localhost.localdomain localhost6 localhost6.localdomain6
 127.0.0.1   {{ development_hostname }}</code></pre>
 <p><code>development_hostname</code> could be, for example: <code>www.example.com</code></p>
@@ -13583,6 +13582,13 @@ Ashraful Islam Shimul / CC BY-SA (<a href="https://creativecommons.org/licenses/
 <li>includes Ansible Tower - Web UI w/ Enterprise Features</li>
 </ul>
 
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Ansible---More-Resources">Ansible - More Resources<a class="anchor-link" href="#Ansible---More-Resources">&#182;</a></h1><hr>
+<h3 id="https://github.com/sovereign/sovereign---DIY-cloud-via-Ansible"><a href="https://github.com/sovereign/sovereign">https://github.com/sovereign/sovereign</a> - DIY cloud via Ansible<a class="anchor-link" href="#https://github.com/sovereign/sovereign---DIY-cloud-via-Ansible">&#182;</a></h3><h3 id="https://github.com/kahowell/ansible-kahowell---my-personal-Ansible-automation"><a href="https://github.com/kahowell/ansible-kahowell">https://github.com/kahowell/ansible-kahowell</a> - my personal Ansible automation<a class="anchor-link" href="#https://github.com/kahowell/ansible-kahowell---my-personal-Ansible-automation">&#182;</a></h3><h3 id="https://github.com/jdauphant/awesome-ansible---curated-list-of-Ansible-resources-(unmaintained)"><a href="https://github.com/jdauphant/awesome-ansible">https://github.com/jdauphant/awesome-ansible</a> - curated list of Ansible resources (unmaintained)<a class="anchor-link" href="#https://github.com/jdauphant/awesome-ansible---curated-list-of-Ansible-resources-(unmaintained)">&#182;</a></h3>
 </div>
 </div>
 </div></section></section><section><section>
